--- a/second index.html
+++ b/second index.html
@@ -18,8 +18,11 @@
 
 
 
-<canvas id="myGameArea" width="500" height="600" style="border: 1px solid #000000;">
+<canvas id="myGameArea" width="344" height="600" style="background: url('./images/field attempt.png')">
 </canvas>
+
+
+<!-- <embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true"> -->
 
 <script src = "./js/second js.js"></script>
 </body>
