--- a/second index.html
+++ b/second index.html
@@ -25,9 +25,9 @@
 
 <label>Penn State: <span id="score-id">0</span></label>
 <label>Away: 0</label>
-<label>Down: <span id="down-id">1st</span></label>
+<label>Down: <span id="down-id">1</span></label>
 
-<!-- <embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true"> -->
+<embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true">
 
 <script src = "./js/second js.js"></script>
 </body>
