--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <label>Away: 0</label>
 <label>Down: <span id="down-id">1</span></label>
 
-<embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true">
+<!-- <embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true"> -->
 
 <script src = "./js/second js.js"></script>
 </body>
