--- a/index.html
+++ b/index.html
@@ -60,14 +60,16 @@
 
 <button class = "start-game" onclick = "startGame()">Start!</button><br>
 
+
+
+</div>
+
 <div class = "messages">
 
     <img class = "touchdownImage" src = "https://media.giphy.com/media/l378pCaLVyBHA4HGE/giphy.gif">
     <img class = "tackledImage" src = "https://media.giphy.com/media/l2ZE9vsa0D0JKm1os/giphy.gif">
     <img class = "gameOverImage" src = "https://media.giphy.com/media/xT9IgOjoNds6MTABna/giphy.gif">
     <img class = "winImage" src = "https://media.giphy.com/media/l378dgW1iZ6NCTclO/giphy.gif">
-
-</div>
 
 </div>
 
@@ -78,11 +80,11 @@
 
 </div>
 
-
 </div>
 
 
-<!-- <embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true"> -->
+
+<embed src="./music/sweet caroline.mp3" autostart="true" loop="true" hidden="true">
 
 <script src = "./js/second js.js"></script>
 </body>
